--- a/src/Components/Organisms/Media-and-content/Media-and-content.scss
+++ b/src/Components/Organisms/Media-and-content/Media-and-content.scss
@@ -1,11 +1,16 @@
 
 .media-and-content{
+    padding-bottom: 106px;
+    display: flex;
+    gap: 62px;
     .container{
-    .row{
-        align-items: center;
-        justify-content: center;
-        display: flex;
-    }
+        .row{
+            align-items: center;
+            justify-content: center;
+            display: flex;
+
+        }
     }
 
 }
+
