--- a/src/Components/Molecules/Card/Card.scss
+++ b/src/Components/Molecules/Card/Card.scss
@@ -8,6 +8,24 @@
         
     }
     
+    .title {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 38.4px;
+    }
+
+    .subtext1{
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 28.8px;
+    }
+
+    .subtext2{
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 25.6px;
+    }
+    
     
 }
 
