--- a/src/Components/Molecules/Card/Card.scss
+++ b/src/Components/Molecules/Card/Card.scss
@@ -1,6 +1,8 @@
 .card{
-    
-    position: relative;
+    border: none !important;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
     .image{
         position: relative;
         max-width:100%;
@@ -18,6 +20,13 @@
         font-weight: 400;
         font-size: 18px;
         line-height: 28.8px;
+
+        div {
+            a{
+                text-decoration: none;
+                color: #0093A7;
+            }
+        }
     }
 
     .subtext2{
@@ -26,6 +35,18 @@
         line-height: 25.6px;
     }
     
-    
+    .button a {
+        color: #0093A7;
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 28.8px;
+
+        img {
+            width: 50px;
+            height: 50px;
+            border:2px solid red;
+        }
+    }
 }
 
