Pictures from component 2 need adjustments + I have to finish the button in component 4

--- a/src/Components/Molecules/Card/Card.scss
+++ b/src/Components/Molecules/Card/Card.scss
@@ -2,12 +2,14 @@
     border: none !important;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+
     gap: 16px;
+
     .image{
         position: relative;
         max-width:100%;
         object-fit: cover;
-        
     }
     
     .title {
