--- a/src/Components/Organisms/FilteredCard-organism/Card-rectangle.scss
+++ b/src/Components/Organisms/FilteredCard-organism/Card-rectangle.scss
@@ -1,33 +1,36 @@
-
-.card-rectangle{
+.custom-row{
     background: #F6F5F4;
-    border-radius: 28px;
-    float: none;
-    margin: 0 auto;
+    padding: 50px 0px;
 
-    .content{
-        padding: 50px 238px 90px 238px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        .text {
-            font-weight: 700;
-            font-size:  28px;
-            line-height: 36.4px;
-            // align-items: center;
-            margin-bottom: 12px;
+    .card-rectangle{
+        border-radius: 28px;
+        float: none;
+        margin: 0 auto;
+        
+        .content{
+            // padding: 50px 238px 90px 238px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            
+            .text {
+                font-weight: 700;
+                font-size:  28px;
+                line-height: 36.4px;
+                // align-items: center;
+                margin-bottom: 12px;
+            }
+            
+            .link{
+                color: #0093A7;
+                font-weight: 700;
+                font-size: 18px;
+                line-height:28.8px;
+                text-decoration: none;
+                cursor: pointer;
+            }
         }
-    
-        .link{
-            color: #0093A7;
-            font-weight: 700;
-            font-size: 18px;
-            line-height:28.8px;
-            text-decoration: none;
-            cursor: pointer;
-        }
+        
     }
-    
 }
