--- a/src/Components/Organisms/TeamCard-organism/TeamCard-organism.scss
+++ b/src/Components/Organisms/TeamCard-organism/TeamCard-organism.scss
@@ -2,7 +2,13 @@
 .teamCard-organism{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap : 40px;
+
+    .header{
+        width: 100vw;
+        text-align: center;
+    }
 
     .row{
         row-gap: 24px;
