--- a/src/Components/Molecules/Team/TeamCard.scss
+++ b/src/Components/Molecules/Team/TeamCard.scss
@@ -10,6 +10,7 @@
 
     .content-container-flipped{
         display: none;
+        border-radius: 8px;
     }
 
     .content-container{
@@ -27,9 +28,6 @@
             font-weight: 400;
             font-size: 24px;
             line-height: 31.2px;
-            // padding-top:  40px;
-            // padding-left: 24px;
-            // padding-right: 24px;
         }
     
         .image{
