--- a/src/Components/Molecules/FilteredCard/Header.scss
+++ b/src/Components/Molecules/FilteredCard/Header.scss
@@ -19,6 +19,15 @@
             line-height: 48.4px;
             margin-bottom: 40px;
         }
+
+        .button{
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            flex-wrap: wrap;
+
+            
+        }
     
 
 }
