--- a/src/Components/Molecules/CheckboxToggle/Toggle.scss
+++ b/src/Components/Molecules/CheckboxToggle/Toggle.scss
@@ -11,11 +11,36 @@
         line-height: 19.2px;
         margin-bottom: 10px;
 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        svg{
+            transform: rotate(0deg);
+            transition: all 0.3s;
+        }
+
         &:active{
             background: #181A23;
+        }
+        
+        &.active{
+            
+            svg{
+                transform: rotate(180deg);
+            }
+        }
+
+
+        &.black{
+            background: black;
+            color: white;
 
         }
     }
+
+
 
     ul {
         position: absolute;
@@ -36,12 +61,16 @@
             display: flex;
             gap: 8px;
 
-            input{
-                // background: linear-gradient(#FF8A00, #FF00FF );
+            input[type="checkbox"]{
                 accent-color: linear-gradient(#FF8A00, #FF00FF);
-                accent-color: #FF8A00;
             }
         }
     }
 
+    .toggle-button-container{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 12px;
+    }
 }
