--- a/src/Components/Organisms/TeamCard-organism/TeamCard-organism.scss
+++ b/src/Components/Organisms/TeamCard-organism/TeamCard-organism.scss
@@ -9,4 +9,10 @@
         row-gap: 24px;
     }
 
+    .social-icons{
+        display: flex;
+        gap: 25px;
+        cursor: pointer;
+    }
+
 }
