--- a/src/Components/Molecules/CheckboxToggle/Toggle.scss
+++ b/src/Components/Molecules/CheckboxToggle/Toggle.scss
@@ -14,7 +14,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 10px;
+        gap: 12px;
 
         svg{
             transform: rotate(0deg);
@@ -53,6 +53,10 @@
         border-radius: 8px;
         list-style-type: none;
         z-index: 100;
+        gap: 7px;
+        padding-top: 12px;
+        padding-right: 20px;
+        padding-bottom: 12px;
 
         li {
             font-weight: 400;
