--- a/src/Components/Organisms/Media-and-content/Media-and-content.scss
+++ b/src/Components/Organisms/Media-and-content/Media-and-content.scss
@@ -1,4 +1,3 @@
-
 .media-and-content{
     padding-bottom: 106px;
     display: flex;
@@ -8,9 +7,62 @@
             align-items: center;
             justify-content: center;
             display: flex;
+            gap: 50px
 
         }
     }
 
+    .content-container-reverse{
+        padding-left: 40px;
+    }
+
+    .content-container{
+        padding-right: 40px;
+    }
+
+    .media-column-reverse{
+        // border: 20px solid red;
+        position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            width: 202px;
+            height: 202px;
+            bottom: -20px;
+            right: -20px;
+            background: url('../../../images/Vector-comp-1.svg');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            z-index: 2;
+        }
+
+    }
+    .media-column{
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 202px;
+            height: 202px;
+            bottom: -20px;
+            left: -20px;
+            background: url('../../../images/Vector_second.svg');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            z-index: 2;
+        } 
+    }
 }
 
+
+@media (min-width: 768px){
+    .media-and-content{
+        .container{
+            .row{
+                gap: unset;
+            }
+        }
+    }
+}
